// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single fields null field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div />
  <div>
    <br />
    <button
      className="ms-Button ms-Button--primary root-49"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="ms-Button-flexContainer flexContainer-50"
        data-automationid="splitbuttonprimary"
      >
        <span
          className="ms-Button-textContainer textContainer-51"
        >
          <span
            className="ms-Button-label label-53"
            id="id__22"
          >
            Submit
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`single fields number field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div
      className="ms-TextField root-41"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-42"
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-43"
            disabled={false}
            id="root"
            name="nodejs"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            type="number"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <button
      className="ms-Button ms-Button--primary root-49"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="ms-Button-flexContainer flexContainer-50"
        data-automationid="splitbuttonprimary"
      >
        <span
          className="ms-Button-textContainer textContainer-51"
        >
          <span
            className="ms-Button-label label-53"
            id="id__19"
          >
            Submit
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`single fields string field format data-url 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div>
      <p>
        <input
          autoFocus={false}
          defaultValue=""
          disabled={false}
          id="root"
          onChange={[Function]}
          type="file"
        />
      </p>
    </div>
  </div>
  <div>
    <br />
    <button
      className="ms-Button ms-Button--primary root-49"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="ms-Button-flexContainer flexContainer-50"
        data-automationid="splitbuttonprimary"
      >
        <span
          className="ms-Button-textContainer textContainer-51"
        >
          <span
            className="ms-Button-label label-53"
            id="id__13"
          >
            Submit
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`single fields string field format email 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <input
      autoFocus={false}
      className="form-control"
      disabled={false}
      id="root"
      list={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      required={false}
      type="email"
      value=""
    />
  </div>
  <div>
    <br />
    <button
      className="ms-Button ms-Button--primary root-49"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="ms-Button-flexContainer flexContainer-50"
        data-automationid="splitbuttonprimary"
      >
        <span
          className="ms-Button-textContainer textContainer-51"
        >
          <span
            className="ms-Button-label label-53"
            id="id__7"
          >
            Submit
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`single fields string field format uri 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <input
      autoFocus={false}
      className="form-control"
      disabled={false}
      id="root"
      list={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      required={false}
      type="url"
      value=""
    />
  </div>
  <div>
    <br />
    <button
      className="ms-Button ms-Button--primary root-49"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="ms-Button-flexContainer flexContainer-50"
        data-automationid="splitbuttonprimary"
      >
        <span
          className="ms-Button-textContainer textContainer-51"
        >
          <span
            className="ms-Button-label label-53"
            id="id__10"
          >
            Submit
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`single fields string field regular 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div
      className="ms-TextField root-41"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-42"
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-43"
            disabled={false}
            id="root"
            name="nodejs"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            type="string"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <button
      className="ms-Button ms-Button--primary root-49"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="ms-Button-flexContainer flexContainer-50"
        data-automationid="splitbuttonprimary"
      >
        <span
          className="ms-Button-textContainer textContainer-51"
        >
          <span
            className="ms-Button-label label-53"
            id="id__4"
          >
            Submit
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`single fields unsupported field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div
      className="unsupported-field"
    >
      <p>
        Unsupported field schema
        <span>
           for
           field 
          <code>
            root
          </code>
        </span>
        <em>
          : 
          Unknown field type undefined
        </em>
        .
      </p>
      <pre>
        {}
      </pre>
    </div>
  </div>
  <div>
    <br />
    <button
      className="ms-Button ms-Button--primary root-49"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="ms-Button-flexContainer flexContainer-50"
        data-automationid="splitbuttonprimary"
      >
        <span
          className="ms-Button-textContainer textContainer-51"
        >
          <span
            className="ms-Button-label label-53"
            id="id__25"
          >
            Submit
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;
